moved game over to game module, going to try and convert the whole thing into a single typescript and js file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-<div class="container">
-  <canvas id="renderingWindow" style="height: 100%; width: 100%; position: absolute; z-index: -1;"></canvas>
-
-  <div style="grid-column: 1 / 4;"></div> <!-- All divs apart from info are buffer divs-->
-  <div></div>
-  <div class="info">
-    <h2 style="font-size: 50px;">{{persistanceText}}</h2>
-
-    <br>
-
-    <h1 style="font-size: 50px;" id="popupText">{{popupText}}</h1>
-  </div>
-  <div></div>
-  <div style="grid-column: 1 / 4;"></div>
-</div>
+<router-outlet></router-outlet>
