--- a/src/app/pages/game/game.component.css
+++ b/src/app/pages/game/game.component.css
@@ -2,16 +2,16 @@
 {
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 
     display: grid;
     grid-template-columns: 20% 60% 20%;
     grid-template-rows: 10% 35% 55%;
-
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .info
 {
     text-align: center;
+    overflow: hidden;
 }
 .pauseMenu
 {
@@ -27,4 +27,5 @@
 
     display: grid;
     place-content: center;
+    overflow: hidden;
 }
