--- a/src/app/pages/level-builder/level-builder.component.html
+++ b/src/app/pages/level-builder/level-builder.component.html
@@ -1,1 +1,29 @@
-TODO: Implement the level builder here
+<div class="container">
+    <div class="containerInner">
+        <div> <input type="button" value="Back to Game" (click)="this.router.navigate(['']);"> </div>
+
+        <div class="levelsContainer">
+            <div class="level" *ngFor="let level of this.levelService.gameLevels; let levelIndex = index;">
+                <div class="levelItemWrapper">Name: <input style="margin-left: 10px;" type="text" [(ngModel)]='level.levelName' (ngModelChange)="saveData()"></div> <br>
+                <div class="levelItemWrapper">Speed: <input  style="margin-left: 10px;" type="number" min="1" max="8" [(ngModel)]='level.speed' (ngModelChange)="saveData()"></div> <br>
+                <div class="levelItemWrapper">
+                    
+                    <div class="levelGrid" [style.height]="(level.obstacles.length * 40) + 'px'">
+                        <div class="levelObstacleRow" *ngFor="let obstacleRow of level.obstacles; let row = index;">
+                            <div class="levelObstacle" *ngFor="let obstacle of obstacleRow; let column = index;" 
+                                [style.background-color]="obstacle == '#' ? '#242424' : 'lightgrey' "
+                                (click)="switchObstacle(levelIndex, row, column)"
+                            ></div>
+                            <div> <input type="button" class="deleteRowButton" value="🗑" (click)="deleteRow(levelIndex, row)"> </div>
+                        </div>
+                    </div>
+                    <input type="button" style="margin: 0 auto; margin-bottom: 10px;" value="Add Row" (click)="addRow(levelIndex)">
+                </div>
+            </div>
+
+            <div class="addLevel levelItemWrapper">
+                <input type="button" value="Add Level" class="addLevelButton" (click)="addLevel()">
+            </div>
+        </div>
+    </div>
+</div>
