--- a/src/app/pages/level-builder/level-builder.component.html
+++ b/src/app/pages/level-builder/level-builder.component.html
@@ -3,10 +3,14 @@
         <div> <input type="button" value="Back to Game" (click)="this.router.navigate(['']);"> </div>
 
         <div class="levelsContainer">
-            <div class="level" *ngFor="let level of this.levelService.gameLevels; let levelIndex = index;">
-                <div class="levelItemWrapper">Name: <input style="margin-left: 10px;" type="text" [(ngModel)]='level.levelName' (ngModelChange)="saveData()"></div> <br>
-                <div class="levelItemWrapper">Speed: <input  style="margin-left: 10px;" type="number" min="1" max="8" [(ngModel)]='level.speed' (ngModelChange)="saveData()"></div> <br>
-                <div class="levelItemWrapper">
+            <div *ngFor="let level of this.levelService.gameLevels; let levelIndex = index;">
+                <div class="centered">Name: <input style="margin-left: 10px;" type="text" [(ngModel)]='level.levelName' (ngModelChange)="saveData()"></div> <br>
+                <div class="centered">Speed: <input  style="margin-left: 10px;" type="number" min="1" max="8" [(ngModel)]='level.speed' (ngModelChange)="saveData()"></div> <br>
+                <div class="centered">
+                    <input type="button" value="Play this level" (click)="goToLevel(levelIndex)">
+                    <input type="button" value="Delete this level" (click)="deleteLevel(levelIndex)">
+                </div> <br>
+                <div class="centered">
                     
                     <div class="levelGrid" [style.height]="(level.obstacles.length * 40) + 'px'">
                         <div class="levelObstacleRow" *ngFor="let obstacleRow of level.obstacles; let row = index;">
@@ -21,7 +25,7 @@
                 </div>
             </div>
 
-            <div class="addLevel levelItemWrapper">
+            <div class="addLevel centered">
                 <input type="button" value="Add Level" class="addLevelButton" (click)="addLevel()">
             </div>
         </div>
