Added checkered flag texture and made level editor look nice

--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -9,11 +9,11 @@
   
     <div></div>
     <div class="info">
-      <h2 style="font-size: 50px;">{{persistanceText}}</h2>
+      <h2 style="font-size: 50px; z-index: 1;">{{persistanceText}}</h2>
   
       <br>
   
-      <h1 style="font-size: 50px;" id="popupText">{{popupText}}</h1>
+      <h1 style="font-size: 50px; z-index: 1;" id="popupText">{{popupText}}</h1>
     </div>
     <div></div>
     <div style="grid-column: 1 / 4;"></div>
