--- a/src/app/pages/level-builder/level-builder.component.css
+++ b/src/app/pages/level-builder/level-builder.component.css
@@ -14,7 +14,7 @@
 
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 50px auto;
+    grid-template-rows: 30px auto 10px; /*Bottom 10px is just for bottom margin*/
 }
 
 
@@ -23,10 +23,18 @@
     width: 100%;
     height: max-content;
 
+    border-left: 1px solid black;
+    border-top: 1px solid black;
+
     display: grid;
     grid-template-columns: 33% 33% 33%;
 }
-@media only screen and (max-width: 1150px) {
+.level
+{
+    border-right: 1px solid black !important;
+    border-bottom: 1px solid black !important;
+}
+@media only screen and (max-width: 1150px) { /*Changing the number of columns to be only 2 or even 1 when the width is smaller*/
     .levelsContainer
     {
         grid-template-columns: 50% 50%;
@@ -49,14 +57,13 @@
         zoom: 80%;
     }
 }
-
 .addLevelButton
 {
-    height: 500px;
-    width: 400px;
+    min-height: 800px;
+    height: 100%;
+    width: 100%;
     margin-bottom: 10px;
 
-    border-radius: 20px;
     background-color: lightgrey;
     transition: 100ms background-color;
     border: none;
@@ -65,19 +72,64 @@
     cursor: pointer;
 }
 .addLevelButton:active
-{
-    background-color: rgb(172, 172, 172);
-}
+{ background-color: rgb(172, 172, 172); }
 
 .centered
 {
     display: grid;
     place-content: center;
 }
+
+
+.levelMetadata
+{
+    height: max-content;
+    width: var(--levelWidthPX);
+
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    display: grid;
+    grid-template-columns: 100px auto;
+    row-gap: 10px;
+}
+.metadataInput
+{
+    height: 40px;
+    width: calc(100% - 20px);
+
+    border: none;
+    background-color: rgb(235, 235, 235);
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.metadataInput:focus
+{ outline: none; }
+
+.playDeleteLevelButton
+{
+    height: 40px;
+    width: calc(var(--levelWidthPX) / 2);
+
+    border: none;
+    color: white;
+    font-size: medium;
+    cursor: pointer;
+}
+.playDeleteLevelButton.play
+{ color: black; background-color: rgb(235, 235, 235); }
+.playDeleteLevelButton.play:hover
+{ background-color: lightgrey; }
+.playDeleteLevelButton.delete
+{ background-color: var(--badButtonColour); }
+.playDeleteLevelButton.delete:hover
+{ background-color: var(--badButtonColourSelected); }
+
 .levelGrid
 {
     /*The actual dimensions for the normal plane is 80 * 200, with 8 cubes on onw row*/
-    width: 360px; /*320px is for the 8 cubes, and then there's an extra 40px for the delete row button */
+    width: calc(var(--levelWidthPX) + 40px); /*320px is for the 8 cubes, and then there's an extra 40px for the delete row button */
     /*height: 800px; Height is set dynamically*/
 
     display: grid;
@@ -85,19 +137,35 @@
     grid-template-rows: repeat(auto-fill, 40px); /* since I multiplied the normal dimensions by 4, I also need to multiply the 10px by 4*/
 
     transform: translateX(20px); /*this is to account for the extra 40px from the delete button*/
-    margin-bottom: 10px;
 }
 .levelObstacleRow
 {
     display: grid;
     grid-template-columns: repeat(auto-fill, 40px);
 }
+.addRowButton
+{   
+    height: 40px;
+    width: var(--levelWidthPX);
+
+    margin: 0 auto;
+    margin-top: 15px;
+    margin-bottom: 10px;
+
+    border: none;
+    background-color: var(--goodButtonColour);
+    color: white;
+    font-size: large;
+    cursor: pointer;
+}
+.addRowButton:active
+{ background-color: var(--goodButtonColourSelected); }
 .deleteRowButton
 {
     height: 100%;
     width: 100%;
 
-    background-color: rgb(255, 130, 130);
+    background-color: var(--badButtonColour);
     opacity: 0%;
     transition: 200ms;
 
