--- a/src/app/pages/game/game.component.css
+++ b/src/app/pages/game/game.component.css
@@ -29,3 +29,37 @@
     place-content: center;
     overflow: hidden;
 }
+
+
+.mobileControls
+{
+    height: 30vw;
+    width: 30vw;
+    min-height: 80px;
+    min-width: 80px;
+    max-height: 300px;
+    max-width: 300px;
+    
+    
+    border: 1.5px solid black;
+    background-color: rgba(128, 128, 128, 0.317);
+    border-radius: 10px;
+    font-size: 1rem;
+
+    position: absolute;
+    bottom: 10px;
+    z-index: 1;
+
+    display: none; /*Hidden by default*/
+}
+.mobileControls:active
+{ background-color: rgba(128, 128, 128, 0.598); }
+.mobileControls.left
+{ left: 10px; }
+.mobileControls.right
+{ right: 10px; }
+
+@media only screen and (hover: none) and (pointer: coarse){
+    .mobileControls
+    { display: block; }
+}
