--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,20 +1,24 @@
 <div class="container">
-    <canvas id="renderingWindow" style="height: 100%; width: 100%; position: absolute; z-index: -1;"></canvas>
-  
-    <div class="pauseMenu" *ngIf="this.paused == true" (click)="this.paused = false; this.startGameLoop();">Game Paused, Click to resume...</div>
+  <canvas id="renderingWindow" style="height: 100%; width: 100%; position: absolute; z-index: -1;"></canvas>
 
-    <div style="grid-column: 1 / 4; text-align: left;"> <!-- All divs apart from info and level editor are buffer divs-->
-      <input type="button" value="Level Editor" style="margin: 10px; z-index: 1;" (click)="this.router.navigate(['levelBuilder']);">
-    </div> 
-  
-    <div></div>
-    <div class="info">
-      <h2 style="font-size: 50px; z-index: 1;">{{persistanceText}}</h2>
-  
-      <br>
-  
-      <h1 style="font-size: 50px; z-index: 1;" id="popupText">{{popupText}}</h1>
-    </div>
-    <div></div>
-    <div style="grid-column: 1 / 4;"></div>
+  <div class="pauseMenu" *ngIf="this.paused == true" (click)="this.paused = false; this.startGameLoop();">Game Paused, Click to resume...</div>
+
+  <div style="grid-column: 1 / 4; text-align: left;"> <!-- All divs apart from info and level editor are buffer divs-->
+    <input type="button" value="Level Editor" style="margin: 10px; z-index: 1;" (click)="this.router.navigate(['levelBuilder']);">
+  </div> 
+
+  <div></div>
+  <div class="info">
+    <h2 style="font-size: 50px; z-index: 1;">{{persistanceText}}</h2>
+
+    <br>
+
+    <h1 style="font-size: 50px; z-index: 1;" id="popupText">{{popupText}}</h1>
   </div>
+  <div></div>
+  <div style="grid-column: 1 / 4;"></div>
+
+  <!-- Mobile Controls -->
+  <input type="button" class="mobileControls left" value="<-" (mousedown)="this.currentKey = 'ArrowLeft'" (mouseup)="this.currentKey = ''">
+  <input type="button" class="mobileControls right" value="->" (mousedown)="this.currentKey = 'ArrowRight'" (mouseup)="this.currentKey = ''">
+</div>
