--- a/src/app/pages/level-builder/level-builder.component.html
+++ b/src/app/pages/level-builder/level-builder.component.html
@@ -24,6 +24,7 @@
                             ></div>
                             <div> <input type="button" class="deleteRowButton" value="—" style="font-size: large;" (click)="deleteRow(levelIndex, row)"> </div>
                         </div>
+                        <div class="levelGridBorder"></div>
                     </div>
                     <input type="button" class="addRowButton" value="Add Row" (click)="addRow(levelIndex)">
                 </div>
