stopped user from being able to zoom in on level editor ?

--- a/src/app/pages/level-builder/level-builder.component.css
+++ b/src/app/pages/level-builder/level-builder.component.css
@@ -10,6 +10,9 @@ input[type=button] /*On iOS it gives buttons round corners for some reason*/
     bottom: 10px;
     left: 10px;
     right: 10px;
+
+    max-zoom: 1.0;
+    user-zoom: 0;
 }
 .containerInner
 {
